@@ -66,6 +66,7 @@ void DefaultCompleter::setDefaults() {
   words.clear();
   registerWord("/ban ");
   registerWord("/banlist");
+  registerWord("/checkip ");
   registerWord("/countdown");
   registerWord("/clientquery");
   registerWord("/date");
