@@ -4,6 +4,7 @@
 BZFlag 2.0.5
 ------------
 
+* Added /checkip command - Frank Thilo
 * "Enable Local Shot/Spawn Effects" affects "Driving with" - Daniel Remenak
 * Show shot reload indicators when driving with a tank - Daniel Remenak
 * Fix misc/bzfquery.pl to handle MsgGameTime - Tegan, Mark Thomas
